--- a/home.html
+++ b/home.html
@@ -4,6 +4,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Home Page</title>
+	<div class="topnav">
+		<a href="#home">Home</a>
+		<a href="#about">About us</a>
+		<a href="#events">Events</a>
+		<a href="#contact">Contact</a>
+		<a href="#support">Partner</a> 
+	</div>
 </head>
 <body>
 
